# hello-grpc

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: win_build.yml
HelloGprc.Protos/: CMakeLists.txt
HelloGprc.Protos/Protos/: CMakeLists.txt
HelloGrpc.Client/: CMakeLists.txt
HelloGrpc.Client/Src/: CMakeLists.txt  Main.cpp
HelloGrpc.Server/: CMakeLists.txt
HelloGrpc.Server/Src/: CMakeLists.txt  Main.cpp
HelloWorld.Launcher/: CMakeLists.txt
HelloWorld.Launcher/Src/: CMakeLists.txt
